# roci

./: Cargo.toml  README.md
.github/actions/setup/: action.yml
.github/workflows/: check-release.yml  checks.yml  release.yml
.zed/: settings.json
crates/roci-app/: Cargo.toml
crates/roci-app-components/: Cargo.toml
crates/roci-app-components/src/: bool.rs  error.rs  lib.rs  list.rs
crates/roci-app/src/: assets.rs  logging.rs  main.rs  runtime.rs  utils.rs
crates/roci-app/src/config/: gitlab_.rs  merge_request.rs  mod.rs  refresh.rs  theme.rs
crates/roci-app/src/dashboard/: configure.rs  error.rs  mod.rs
crates/roci-app/src/dashboard/issue/: endpoint.rs  mod.rs
crates/roci-app/src/dashboard/project/: merge_request.rs  mod.rs  pipeline.rs
crates/roci-app/src/dashboard/todo/: endpoint.rs  mod.rs
crates/roci-app/src/state/: mod.rs
crates/roci-app/src/state/gitlab/: issue.rs  mod.rs  todo.rs  user.rs
crates/roci-app/src/state/gitlab/project/: merge_request.rs  mod.rs  pipeline.rs
