[workspace]
default-members = ["crates/roci-app"]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.4.1"

anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"] }
derive_more = { version = "2.0.1", features = ["constructor"] }
thiserror = "2.0.17"
rust-embed = "8.9.0"
strum = "0.27"
strum_macros = "0.27"
open = "5"
tracing-unwrap = "1.0"
homedir = "0.3.6"
ron = "0.12.0"

gitlab = "0.1805.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
