[package]
description = "Headquarter of Biologic R&D"
edition = "2021"
keywords = ["desktop", "gpui", "dashboard"]
name = "roci"
readme = "../../README.md"
version = "0.3.0"

[dependencies]
roci-app-components = { path = "../roci-app-components" }
gpui.workspace = true
gpui-component.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gitlab.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
rust-embed.workspace = true
strum.workspace = true
strum_macros.workspace = true
open.workspace = true
tracing-unwrap.workspace = true
derive_more.workspace = true
reqwest.workspace = true
homedir.workspace = true
ron.workspace = true
keyring.workspace = true
dark-light = "2.0.0"
